=== HEAD

* Replace Dataset#virtual_row_block_call with Sequel.virtual_row (jeremyevans)

* Allow Dataset #delete, #update, and #insert to respect existing WITH clauses on MSSQL (dlee, jeremyevans)

* Add touch plugin, which adds Model#touch for updating an instance's timestamp, as well as touching associations when an instance is updated or destroyed (jeremyevans)

* Add sql_expr extension, which adds the sql_expr to all objects, giving them easy access to Sequel's DSL (jeremyevans)

* Add active_model plugin, which gives Sequel::Model an ActiveModel compliant API, passes the ActiveModel::Lint tests (jeremyevans)

* Fix MySQL commands out of sync error when using queries with multiple result sets without retrieving all result sets (jeremyevans)

* Allow splitting of multiple result sets into separate arrays when using multiple statements in a single query in the native MySQL adapter (jeremyevans)

* Don't include primary key indexes when parsing MSSQL indexes on JDBC (jeremyevans)

* Make Dataset#insert_select return nil on PostgreSQL if disable_insert_returning is used (jeremyevans)

* Speed up execution of prepared statements with bound variables on MySQL (ibc@aliax.net)
 
* Add association_dependencies plugin, for deleting, destroying, or nullifying associated objects when destroying a model object (jeremyevans)

* Add :validate association option, set to false to not validate when implicitly saving associated objects (jeremyevans)

* Add subclasses plugin, for recording all of a models subclasses and descendent classes (jeremyevans)

* Add looser_typecasting extension, for using .to_f and .to_i instead of Kernel.Float and Kernel.Integer when typecasting floats and integers (jeremyevans)

* Catch database errors when preparing statements or setting variable values when using the native MySQL adapter (jeremyevans)

* Add typecast_on_load plugin, for fixing bad database typecasting when loading model objects (jeremyevans)
